allprojects {
    group 'com.endoflineblog.truffle'
    version '1.0'
}

subprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    test {
        useJUnitPlatform()

        jvmArgs '-ea', '--enable-native-access=ALL-UNNAMED',
                '--sun-misc-unsafe-memory-access=allow'

        testLogging {
            events 'failed'
            exceptionFormat 'full'
        }
    }

    ext {
        graal_version = '25.0.2'
        antlr_version = '4.13.2'
    }

    dependencies {
        implementation "org.graalvm.truffle:truffle-api:$graal_version"
        annotationProcessor "org.graalvm.truffle:truffle-dsl-processor:$graal_version"

        testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    }
}
